Refactored Artist; Added tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,2 +1,18 @@
 [metadata]
 description-file = README.md
+
+[coverage:run]
+branch = True
+
+[coverage:report]
+exclude_lines =
+    pragma: no cover
+    def __repr__
+    raise NotImplementedError
+    if 0:
+    if __name__ == .__main__.
+ignore_errors = True
+sort = Cover
+fail_under = 88
+show_missing = True
+precision = 2
