--- a/.travis.yml
+++ b/.travis.yml
@@ -11,5 +11,10 @@ install:
   - pip install -r requirements.txt
   - pip install -r requirements-dev.txt
 
+before_script: # configure a headless display to test plot generation
+- "export DISPLAY=:99.0"
+- "sh -e /etc/init.d/xvfb start"
+- sleep 3 # give xvfb some time to start
+
 script:
   - pytest --cov=projectpredict
