--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,17 @@
 language: python
 python:
   - "2.7"
-  - "3.3"
-  - "3.4"
   - "3.5"
   - "3.6"
-  - "3.7"
 
 install:
   - pip install -r requirements.txt
   - pip install -r requirements-dev.txt
+
+before_script: # configure a headless display to test plot generation
+- "export DISPLAY=:99.0"
+- "sh -e /etc/init.d/xvfb start"
+- sleep 3 # give xvfb some time to start
 
 script:
   - pytest --cov=projectpredict
