--- a/setup.cfg
+++ b/setup.cfg
@@ -11,6 +11,7 @@ exclude_lines =
     raise NotImplementedError
     if 0:
     if __name__ == .__main__.
+    def draw
 ignore_errors = True
 sort = Cover
 fail_under = 88
