updating CodeClimate configuration

--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -23,6 +23,9 @@ checks:
   method-lines:
     config:
       threshold: 40
+  argument-count:
+    config:
+      threshold: 20
 ratings:
   paths:
     - "**.py"
