--- a/.travis.yml
+++ b/.travis.yml
@@ -23,4 +23,4 @@ script:
   - pytest --cov=projectpredict
 
 after_script:
-  - ./cc-test-reporter after-build --exit-code $TRAVIS_TEST_RESULT
+  - ./cc-test-reporter after-build --file .coverage
