Tey another attempt at test coverage with CodeClimate

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,18 +10,14 @@ python:
 install:
   - pip install -r requirements.txt
   - pip install -r requirements-dev.txt
-  - pip install coverage
 
 before_script: # configure a headless display to test plot generation
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
-  - sleep 3 # give xvfb some time to start
-  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-i686 > ./cc-test-reporter
+  - curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter
   - chmod +x ./cc-test-reporter
   - ./cc-test-reporter before-build
 
 script:
-  - coverage run pytest
+  - pytest --cov=projectpredict
 
 after_script:
   - ./cc-test-reporter after-build -t coverage.py --exit-code $TRAVIS_TEST_RESULT
